2016-11-20  Eric Herman <eric@freesa.org>

	introduce a sign field

	* src/ehbigint.h: introduce the new field
	* README: note the new field
	* src/ehbigint.c: rework logic to use sign bit
	* src/ehbigint-str.c: zero-out fields only to 0x00, not 0xFF
	* tests: initialize the sign bit to zero

2016-11-17  Eric Herman <eric@freesa.org>

	ehbi_set_decimal_string allow negative numbers
	ehbi_to_decimal_string respect negative numbers

	* src/ehbigint.h: add "ehbi_negate" function
	* src/ehbigint.c: add "ehbi_negate" function
	* src/ehbigint-str.c: deal with negative numbers better
	* tests/test-from-decimal-to-decimal-round-trip.c: "-1"


2016-11-15  Eric Herman <eric@freesa.org>

	finally find and fix corner-case in from_decimal going negative
	introduce DIVIDE_BY_ZERO error code

	* src/ehbigint-str.c: leave leading 00 if first hex byte > 0x7F
	* tests/test-div.c: add test with case which revealed bug
	* tests/test-from-decimal-to-decimal-round-trip.c: check >= 0

2016-11-13  Eric Herman <eric@freesa.org>

	implement "long mulitiplication" rather than loop-increment
	fix corner-case in ehbi_div
	reorganize the string parsing, improve naming
	make Ehbi_log_error macro names less "shouty"
	make Test_log_error macro names less "shouty"
	remove dependencies on libehstr, echeck
	add ifdef __cplusplus extern "C" to headers

	* src/ehbigint.c: rewrite ehbi_mul, reference ehbigint-str.h
	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h
	* src/ehbigint-str.c: move all the string stuff here,
		inline hex and decimal from libehstr
	* src/ehbigint-util.h: move out the string stuff
	* src/ehbigint-util.c: move out the string stuff
	* src/ehbigint-log.c: reference ehbigint-str.h
	* src/ehbigint.c: reference ehbigint-str.h
	* tests/echeck.h: copy-in files from echeck
	* tests/echeck.c: copy-in files from echeck
	* tests/*.c: remove reference to system echeck
	* README: add some usage docs
	* Makefile.am: include new ehbigint-str.*
