@@ -58,10 +58,8 @@ int main(int argc, char **argv)
 	failures = 0;
 
 	failures += test_inc_l(v, "700000000000", 134124, "700000134124");
-/*
 	failures += test_inc_l(v, "700000000000", -2, "699999999998");
 	failures += test_inc_l(v, "1", -3, "-2");
-*/
 
 	if (failures) {
 		Test_log_error2("%d failures in %s\n", failures, __FILE__);
