@@ -1,3 +1,13 @@
+2016-11-21  Eric Herman <eric@freesa.org>
+
+	find the bug with decrement (failing to early return)
+
+	* src/ehbigint.c: return correctly; remove debug prints
+	* tests/test-dec.c: add more tests
+	* tests/test-div.c: adjust test order
+	* tests/test-inc-l.c: add two more tests
+	* tests/test-set-l.c: add a test
+
 2016-11-20  Eric Herman <eric@freesa.org>
 
 	introduce a sign field
